# text-adventure-game

./: .gitignore  TODOS.md  pyproject.toml
.github/workflows/: python-app.yml
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: PasswordCriteria.tsx
frontend/src/pages/: Login.tsx  Register.tsx  pages.types.ts
server/: pyproject.toml  test.rest
server/db/: db.py  models.py  vector_store.py
server/db/alembic/: env.py
server/db/alembic/versions/: 056ca88b8731_story_tags_table.py  0d96bd56ee1d_create_chat_tables.py  3859d87a3476_story_settings_tables.py  8b30cc3f7824_create_users_table.py  c3ce5088adba_story_settings_tables.py
server/src/: app.py  dependencies.py  exceptions.py  utils.py
server/src/models/: __init__.py  chat.py  enums.py  story.py  user.py
server/src/repository/: __init__.py  chat_repository.py  chat_repository_impl.py  story_repository.py  story_repository_impl.py  user_repository.py  user_repository_impl.py  world_repository.py  world_repository_impl.py
server/src/routers/: __init__.py  chat_router.py  story_router.py  user_router.py
server/src/service/: __init__.py  chat_service.py  llm_service.py  story_service.py  user_service.py
server/test/: conftest.py
server/test/e2e/: test_user_router.py
server/test/integration/: test_registration.py  test_user_router.py
server/test/unit/: test_user_repository.py  test_user_service.py
